--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
   </main>
 
   <footer>
-    <p class="attribution">
+    <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Shubhangi Borole</a>.
-    </p>
+      Coded by <a href="https://github.com/BoroleShubhangi/FM-four-card-feature-section">Shubhangi Borole</a>.
+    </p> -->
+
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/BoroleShubhangi/FM-four-card-feature-section">Shubhnagi Borole</a>.
   </footer>
 </body>
 
