--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Four card feature section</title>
   <link rel="stylesheet" href="style.css">
@@ -22,25 +21,25 @@
 
   <main>
     <div class="container">
-      <div class="background-style cyan-card transform">
+      <div class="card-bg cyan-card ">
         <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
         <img src="./images/icon-supervisor.svg" class="image" alt="Supervisor">
       </div>
 
-      <div class="background-style red-card">
+      <div class="card-bg red-card">
         <h2>Team Builder</h2>
         <p>Scans our talent network to create the optimal team for your project</p>
-        <img src="./images/icon-team-builder.svg" class="image" alt="team builder">
+        <img src="./images/icon-team-builder.svg" class="image" alt="Team builder">
       </div>
 
-      <div class="background-style transform orange-card">
+      <div class="card-bg  orange-card">
         <h2>Karma</h2>
         <p>Regularly evaluates our talent to ensure quality</p>
         <img src="./images/icon-karma.svg" class="image" alt="karma">
       </div>
 
-      <div class="background-style  blue-card">
+      <div class="card-bg  blue-card">
         <h2>Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
         <img src="./images/icon-calculator.svg" alt="Calculator" class="image">
@@ -50,14 +49,9 @@
   </main>
 
   <footer>
-    <!-- <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/BoroleShubhangi/FM-four-card-feature-section">Shubhangi Borole</a>.
-    </p> -->
-
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/BoroleShubhangi/FM-four-card-feature-section">Shubhnagi Borole</a>.
+        Coded by <a href="https://github.com/BoroleShubhangi/FM-four-card-feature-section" target="_blank">Shubhnagi Borole</a>.
   </footer>
 </body>
 
